--- a/072020-edm_01.html
+++ b/072020-edm_01.html
@@ -30,7 +30,7 @@ html { -webkit-text-size-adjust: none; -ms-text-size-adjust: none;}
 </head>
 <body style="margin: 0; padding: 0;">
 
-<table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #FFFFFF; min-width: 350px; font-size: 1px; line-height: normal;">
+<table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #EEF4F0; min-width: 350px; font-size: 1px; line-height: normal;">
    <tr>
       <td align="center" valign="top">          
          <!--[if (gte mso 9)|(IE)]>
@@ -238,11 +238,11 @@ html { -webkit-text-size-adjust: none; -ms-text-size-adjust: none;}
 
                                     <div style="height: 34px; line-height: 34px; font-size: 32px;">&nbsp;</div>
                                     <font face="'Raleway', sans-serif" color="#868686" style="font-size: 17px; line-height: 20px;">
-                                       <!--hide<span style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #868686; font-size: 17px; line-height: 20px;">We know that investing can be intimidating. You've searched online, asked your friends for advice, but it's hard to make sense of the terms, the documents, or the advice different people have given you. That's why we created Earnest.</span>-->
+                                       <!--hide<span style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #868686; font-size: 17px; line-height: 20px;">We know that investing can be intimidating. You've searched online, asked your friends for advice, but it's hard to make sense of the terms, the documents, or the advice different people have given you. That's why we created Earnest.</span>
                                     </font>
                                     <div style="height: 15px; line-height: 3px; font-size: 1px;">&nbsp;</div>
                                     <font face="'Raleway', sans-serif" color="#1a1a1a" style="font-size: 17px; line-height: 20px;">
-                                       <span style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #1a1a1a; font-size: 17px; line-height: 20px;"><a href="mailto:pilot@earnest.ph?subject=I would like to unsubscribe" target="_blank" style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #BBB; font-size: 16px; line-height: 20px; text-decoration: none;">Unsubscribe from Jarvis emails</a></span>
+                                       <span style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #1a1a1a; font-size: 17px; line-height: 20px;"><a href="mailto:pilot@earnest.ph?subject=I would like to unsubscribe" target="_blank" style="font-family: 'Raleway', Arial, Tahoma, Geneva, sans-serif; color: #BBB; font-size: 16px; line-height: 20px; text-decoration: none;">Unsubscribe from Jarvis emails</a></span>-->
                                     </font>
                                     <div style="height: 35px; line-height: 35px; font-size: 33px;">&nbsp;</div>
                                     <table cellpadding="0" cellspacing="0" border="0">
